welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value die7
    if (die1==6) {7} else {die1+die7}
                                ^